# m2g_learn

./: .gitignore  AGENT.md  README.md
20260622Fourlegged_tool_aware/code/: README.md  pyproject.toml
20260622Fourlegged_tool_aware/code/test_current_vlm/tool_counterexample_benchmark/: .env.example  README.md  ollama_download.sh  requirements.txt
20260622Fourlegged_tool_aware/code/test_current_vlm/tool_counterexample_benchmark/config/: models.yaml  prompt_sets.yaml  tasks.yaml  web_image_queries.yaml
20260622Fourlegged_tool_aware/code/test_current_vlm/tool_counterexample_benchmark/images/: README.md
20260622Fourlegged_tool_aware/code/test_current_vlm/tool_counterexample_benchmark/scripts/: collect_web_images.py  smoke_bailian_config_check.py  smoke_ollama_config_check.py
20260622Fourlegged_tool_aware/code/test_current_vlm/tool_counterexample_benchmark/src/: __init__.py  evaluator.py  image_utils.py  load_config.py  prompt_builder.py  report_writer.py  response_parser.py  run_batch.py
20260622Fourlegged_tool_aware/code/test_current_vlm/tool_counterexample_benchmark/src/providers/: base.py  (+8 more)
20260622Fourlegged_tool_aware/code/test_current_vlm/tool_counterexample_benchmark/tests/: test_evaluator.py  test_prompt_type.py
20260622Fourlegged_tool_aware/code/toolgen2d/: README.md  __init__.py  analysis.py  config.py  geometry.py  physics.py  render.py  train.py  visualize.py
20260622Fourlegged_tool_aware/code/toolgen2d/envs/: __init__.py  base.py  hook_env.py  sweeper_env.py
20260622Fourlegged_tool_aware/code/toolgen2d/optim/: __init__.py  cem.py  random_search.py
(+72 files in other folders)
