[project]
name = "toolgen2d"
version = "0.1.0"
description = "A lightweight 2D tool-generation toy benchmark using Pymunk"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "pymunk>=6.6.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "imageio>=2.31.0",
    "tqdm>=4.65.0",
    "rich>=13.4.0",
    "pydantic>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["toolgen2d"]
pythonVersion = "3.10"